feat: add icons

--- a/index.html
+++ b/index.html
@@ -8,59 +8,108 @@
     <title>Aliaksandr Horbach</title>
   </head>
   <body class="body">
-    <div class="wrapper">
+    
       <header class="header">
-        <nav class="header__menu">
-          <ul class="menu">
-            <li class="menu__item">
-              <a class="menu__link" href="#contacts">contacts</a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#about">about</a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#education">education</a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#skills">skills</a>
-            </li>
-          </ul>
-        </nav>
-
-        <div class="layout">
-          <div>
-            <figure class="photo">
-              <img
-                class="photo__img"
-                src="./Photo.img"
-                alt="Photo of Aliaksandr Horbach"
-              />
-            </figure>
-          </div>
-
-          <div class="header__title title">
-            <h1 class="title">Aliaksandr Horbach</h1>
-            <h3 class="title">Frontend developer</h3>
+        <div class="wrapper">
+          <nav class="header__menu">
+            <ul class="menu">
+              <li class="menu__item">
+                <a class="menu__link" href="#contacts">contacts</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#about">about</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#education">education</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#skills">skills</a>
+              </li>
+            </ul>
+          </nav>
+  
+          <div class="layout">
+            <div>
+              <figure class="photo">
+                <img
+                  class="photo__img"
+                  src="./Photo.img"
+                  alt="Photo of Aliaksandr Horbach"
+                />
+              </figure>
+            </div>
+  
+            <div class="header__title title">
+              <h1 class="title">Aliaksandr Horbach</h1>
+              <h3 class="title">Frontend developer</h3>
+            </div>
           </div>
         </div>
+
       </header>
 
       <main>
         <section id='contacts' class="contacts">
+          <div class="wrapper">
             <h2 class="title--bold">contacts</h2>
+            <ul class="contacts-list">
+              <li class="contacts-list__item">
+                <div class="contacts-list__icon contacts-list__icon--git"></div>
+                <div><a href=""></a></div>
+              </li>
+
+              <li>
+                <div class="contacts-list__icon contacts-list__icon--ld"></div>
+                <div><a href=""></a></div>
+              </li>
+
+              <li>
+                <div class="contacts-list__icon contacts-list__icon--tg"></div>
+                <div><a href=""></a></div>
+              </li>
+
+              <li>
+                <div class="contacts-list__icon contacts-list__icon--fb"></div>
+                <div><a href=""></a></div>
+              </li>
+
+              <li>
+                <div class="contacts-list__icon contacts-list__icon--inst"></div>
+                <div><a href=""></a></div>
+              </li>
+
+              <li>
+                <div class="contacts-list__icon contacts-list__icon--gmail"></div>
+                <div><a href=""></a></div>
+              </li>
+
+              <li>
+                <div class="contacts-list__icon contacts-list__icon--geo"></div>
+                <div><a href=""></a></div>
+              </li>
+            </ul>
+
+          </div>
+            
         </section>
         <section id='about' class="about">
-            <h2 class="title--bold">about</h2>
+            <div class="wrapper">
+              <h2 class="title--bold">about</h2>
+            </div>
         </section>
         <section id='education' class="education">
+           <div class="wrapper">
             <h2 class="title--bold">education</h2>
+           </div>
         </section>
         <section id='skills' class="skills">
-            <h2 class="title--bold">skills</h2>
+            <div class="wrapper">
+              <h2 class="title--bold">skills</h2>
+            </div>
         </section>
       </main>
 
       <footer></footer>
-    </div>
+
   </body>
 </html>
