feat: add description

--- a/index.html
+++ b/index.html
@@ -49,57 +49,66 @@
       </header>
 
       <main>
+        
         <section id='contacts' class="contacts">
           <div class="wrapper">
             <h2 class="title--bold">contacts</h2>
+
             <ul class="contacts-list">
+
               <li class="contacts-list__item">
                 <div class="contacts-list__icon contacts-list__icon--git"></div>
-                <div><a href=""></a></div>
+                <div class="contacts-list__description"><a href="https://github.com/HorbachAlex" target="_blank">HorbachAlex</a></div>
               </li>
 
-              <li>
+              <li class="contacts-list__item">
                 <div class="contacts-list__icon contacts-list__icon--ld"></div>
-                <div><a href=""></a></div>
+                <div class="contacts-list__description"><a href="https://www.linkedin.com/in/alex-horbach-9aba9418a/" target="_blank">Alex Horbach</a></div>
               </li>
 
-              <li>
+              <li class="contacts-list__item">
                 <div class="contacts-list__icon contacts-list__icon--tg"></div>
-                <div><a href=""></a></div>
+                <div class="contacts-list__description"><a href="https://t.me/Alakaktyc" target="_blank">t.me/Alakaktyc</a></div>
               </li>
 
-              <li>
+              <li class="contacts-list__item">
                 <div class="contacts-list__icon contacts-list__icon--fb"></div>
-                <div><a href=""></a></div>
+                <div class="contacts-list__description"><a href="https://www.facebook.com/profile.php?id=100065521835114" target="_blank">Alex Horbach</a></div>
               </li>
 
-              <li>
+              <li class="contacts-list__item">
                 <div class="contacts-list__icon contacts-list__icon--inst"></div>
-                <div><a href=""></a></div>
+                <div class="contacts-list__description"><a href="https://www.instagram.com/fuuuuunculture/" target="_blank">fuuuuunculture</a></div>
               </li>
 
-              <li>
+              <li class="contacts-list__item">
                 <div class="contacts-list__icon contacts-list__icon--gmail"></div>
-                <div><a href=""></a></div>
+                <div class="contacts-list__description"><a href="mailto:horbachalex91@gmail.com" target="_blank">horbachalex91@gmail.com</a></div>
               </li>
 
-              <li>
+              <li class="contacts-list__item">
                 <div class="contacts-list__icon contacts-list__icon--geo"></div>
-                <div><a href=""></a></div>
+                <div class="contacts-list__description"><p>Poland, Wroclaw</p></div>
               </li>
             </ul>
 
           </div>
             
         </section>
+
+
         <section id='about' class="about">
             <div class="wrapper">
               <h2 class="title--bold">about</h2>
+              <p>Extremely motivated for career change goal. Highly organized and detail-oriented.</p>
             </div>
         </section>
+
+
         <section id='education' class="education">
            <div class="wrapper">
             <h2 class="title--bold">education</h2>
+            <p>2012-2017 Yanka Kupala State University of Grodno (Faculty of Physical Education)</p>
            </div>
         </section>
         <section id='skills' class="skills">
