feat: add other info

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
         <section id='about' class="about">
             <div class="wrapper">
               <h2 class="title--bold">about</h2>
-              <p>Extremely motivated for career change goal. Highly organized and detail-oriented.</p>
+              <p>I am a hard working, honest individual. I am a good timekeeper, always willing to learn new skills. 
+                I am friendly, helpful and polite, have a good sense of humour. 
+                I am able to work independently in busy environments and also within a team setting. 
+                I am outgoing and tactful, and able to listen effectively when solving problems.
+                Extremely motivated for career change goal. Highly organized and detail-oriented.</p>
             </div>
         </section>
 
@@ -108,17 +112,31 @@
         <section id='education' class="education">
            <div class="wrapper">
             <h2 class="title--bold">education</h2>
-            <p>2012-2017 Yanka Kupala State University of Grodno (Faculty of Physical Education)</p>
+            <p class="education__text"><span class="education__text--color">2012 - 2017</span> Yanka Kupala State University of Grodno (Faculty of Physical Education)</p>
+            <p class="education__text"><span class="education__text--color">2008 - 2012</span> College of Lida (Production and technical operation of devices and apparatuses)</p>
            </div>
         </section>
         <section id='skills' class="skills">
             <div class="wrapper">
               <h2 class="title--bold">skills</h2>
+              <ul class="skills-list">
+                <li class="skills-list__item">HTML</li>
+                <li class="skills-list__item">CSS (SASS)</li>
+                <li class="skills-list__item">JavaScript</li>
+                <li class="skills-list__item">BEM Methodology</li>
+                <li class="skills-list__item">Gulp</li>
+                <li class="skills-list__item">Git</li>
+                <li class="skills-list__item">React</li>
+              </ul>
             </div>
         </section>
       </main>
 
-      <footer></footer>
+      <footer class="footer">
+          <div class="footer__item"><a href="https://github.com/HorbachAlex" target="_blank"><img class="footer__img" src="./icons/github.svg" alt="Github of Alex Horbach"></a></div>
+          <div class="footer__item">2022 &copy; Aliaksandr Horbach</div>
+          <div class="footer__item"><a href="https://rs.school/js/" target="_blank"><img class="footer__img" src="./icons/rs_school_js.svg" alt="Rs School"></a></div>
+      </footer>
 
   </body>
 </html>
