feat; styled footer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
               <li class="menu__item">
                 <a class="menu__link" href="#skills">skills</a>
               </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#languages">languages</a>
+              </li>
             </ul>
           </nav>
   
@@ -119,23 +122,39 @@
         <section id='skills' class="skills">
             <div class="wrapper">
               <h2 class="title--bold">skills</h2>
-              <ul class="skills-list">
-                <li class="skills-list__item">HTML</li>
-                <li class="skills-list__item">CSS (SASS)</li>
-                <li class="skills-list__item">JavaScript</li>
-                <li class="skills-list__item">BEM Methodology</li>
-                <li class="skills-list__item">Gulp</li>
-                <li class="skills-list__item">Git</li>
-                <li class="skills-list__item">React</li>
+              <ul class="list">
+                <li class="list__item">HTML</li>
+                <li class="list__item">CSS (SASS)</li>
+                <li class="list__item">JavaScript</li>
+                <li class="list__item">BEM Methodology</li>
+                <li class="list__item">Gulp</li>
+                <li class="list__item">Git</li>
+                <li class="list__item">React</li>
               </ul>
             </div>
         </section>
+
+        <section id='languages' class="languages">
+          <div class="wrapper">
+            <h2 class="title--bold">languages</h2>
+            <ul class="list">
+              <li class="list__item">English (Beginner)</li>
+              <li class="list__item">Russian (Native)</li>
+              <li class="list__item">Polish (Elementary)</li>
+            </ul>
+          </div>
+      </section>
+
+        
       </main>
 
       <footer class="footer">
+        <div class="wrapper footer__wrapper">
           <div class="footer__item"><a href="https://github.com/HorbachAlex" target="_blank"><img class="footer__img" src="./icons/github.svg" alt="Github of Alex Horbach"></a></div>
           <div class="footer__item">2022 &copy; Aliaksandr Horbach</div>
           <div class="footer__item"><a href="https://rs.school/js/" target="_blank"><img class="footer__img" src="./icons/rs_school_js.svg" alt="Rs School"></a></div>
+        </div>
+          
       </footer>
 
   </body>
